--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -36,6 +36,18 @@
                 </li>
             </ul>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/Pedido/CadastroPedido">
+                <span class="oi oi-basket" aria-hidden="true"></span> Pedidos
+            </NavLink>
+            <ul class="nav flex-column">
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="/Product/ListProduct" Match=@NavLinkMatch.All>
+                        <span class="oi oi-plus" aria-hidden="true"></span>Listar Pedidos
+                    </NavLink>
+                </li>
+            </ul>
+        </li>
     </ul>
 </div>
 
